--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@ footer{
 
     <div class="flex_boxes">
          <div>
-          <img src="Images/image.jpg" alt="" width="380px" height="380px">
+          <img src="/Images/image.jpg" alt="" width="380px" height="380px">
          </div>
          <div>
-          <img src="Images/image.jpg" alt="" width="380px" height="380px" id="round">
+          <img src="/Images/image.jpg" alt="" width="380px" height="380px" id="round">
          </div>
     </div>
 
