--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@ footer{
 
     <div class="flex_boxes">
          <div>
-          <img src="image.jpg" alt="" width="380px" height="380px">
+          <img src="image.jpg" alt="Main DIV First Image" width="380px" height="380px">
          </div>
          <div>
-          <img src="image.jpg" alt="" width="380px" height="380px" id="round">
+          <img src="image.jpg" alt="Main DIV Second Image" width="380px" height="380px" id="round">
          </div>
     </div>
 
@@ -228,20 +228,20 @@ footer{
     <div class="main_flex">
 
         <div class="imgdiv">
-          <img src="image.jpg" alt="" width="120px" height="120px"><br>
+          <img src="image.jpg" alt="Middle DIV First Image" width="120px" height="120px"><br>
           <a class="black">First image</a><br><br>
           <span class="black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
         <div class="imgdiv">
-         <img src="image.jpg" alt="" width="120px" height="120px"><br>
+         <img src="image.jpg" alt="Middle DIV Second Image" width="120px" height="120px"><br>
          <a class="black">Second image</a><br><br>
          <span class="black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
-        <div class="imgdiv"><img src="image.jpg" alt="" width="120px" height="120px"><br>
+        <div class="imgdiv"><img src="image.jpg" alt="Middle DIV Third Image" width="120px" height="120px"><br>
           <a class="black">Third image</a><br><br>
           <span class="black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
-        <div class="imgdiv"><img src="image.jpg" alt="" width="120px" height="120px"><br>
+        <div class="imgdiv"><img src="image.jpg" alt="Middle DIV Fourth Image" width="120px" height="120px"><br>
           <a class="black">Fourth image</a><br><br>
           <span class="black"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
@@ -254,38 +254,38 @@ footer{
       
     <div class="flex_boxes1">
       <div>
-        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="Bottom DIV First Image" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Top Left</span>    
       </div>
     </div>
 
       <div>
-        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="Bottom DIV Second Image" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Top Center</span>
       </div>
     </div>
 
       <div>
-        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="Bottom DIV Third Image" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Top Right</span>
         </div>
     </div>
   </div>
   <div class="flex_boxes1">
       <div>
-        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="Bottom DIV Fourth Image" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Bottom Left</span>    
       </div>
     </div>
 
       <div>
-        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="Bottom DIV Fifth Image" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Bottom Center</span>
       </div>
     </div>
 
       <div>
-        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="Bottom DIV Sixth Image" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Bottom Right</span>
       </div>
     </div>
