--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ text-align:justify;
 		amet consectetur adipisicin adipis.
 		</a></div>
          <div>
-          <img src="images/image.jpg" alt="" width="380px" height="380px" id="round">
+          <img src="image.jpg" alt="" width="380px" height="380px" id="round">
          </div>
     </div>
 
@@ -245,20 +245,20 @@ text-align:justify;
     <div class="main_flex">
 
         <div class="imgdiv">
-          <img src="images/image.jpg" alt="" width="120px" height="120px"><br>
+          <img src="image.jpg" alt="" width="120px" height="120px"><br>
           <a class="black">First image</a><br><br>
           <span class="black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
         <div class="imgdiv">
-         <img src="images/image.jpg" alt="" width="120px" height="120px"><br>
+         <img src="image.jpg" alt="" width="120px" height="120px"><br>
          <a class="black">Second image</a><br><br>
          <span class="black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
-        <div class="imgdiv"><img src="images/image.jpg" alt="" width="120px" height="120px"><br>
+        <div class="imgdiv"><img src="image.jpg" alt="" width="120px" height="120px"><br>
           <a class="black">Third image</a><br><br>
           <span class="black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
-        <div class="imgdiv"><img src="images/image.jpg" alt="" width="120px" height="120px"><br>
+        <div class="imgdiv"><img src="image.jpg" alt="" width="120px" height="120px"><br>
           <a class="black">Fourth image</a><br><br>
           <span class="black"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, dignissimos!</span>
         </div>
@@ -271,38 +271,38 @@ text-align:justify;
       
     <div class="flex_boxes1">
       <div>
-        <img src="images/image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Top Left</span>    
       </div>
     </div>
 
       <div>
-        <img src="images/image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Top Center</span>
       </div>
     </div>
 
       <div>
-        <img src="images/image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Top Right</span>
         </div>
     </div>
   </div>
   <div class="flex_boxes1">
       <div>
-        <img src="images/image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Bottom Left</span>    
       </div>
     </div>
 
       <div>
-        <img src="images/image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Bottom Center</span>
       </div>
     </div>
 
       <div>
-        <img src="images/image.jpg" alt="" width="290px" height="190px" class="cimg">
+        <img src="image.jpg" alt="" width="290px" height="190px" class="cimg">
         <div class="bottom"><span>Bottom Right</span>
       </div>
     </div>
