--- a/element.html
+++ b/element.html
@@ -4,14 +4,10 @@
     <title>Elements</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
     <style>
       body {
         margin-top: 15px;
-        background: url(images/Background1.jpg) no-repeat left center fixed;
+        background: url('backgroundImage.png') no-repeat left center fixed;
         background-size: cover;
         background-blend-mode: darken;
       }
@@ -65,24 +61,20 @@
       <tr>
         <th class="title">Agustus Travels</th>
         <th class="header">
-          <a href="index.html"
-            >Home <i class="glyphicon glyphicon-chevron-down"></i
-          ></a>
+          <a href="index.html">Home</a>
         </th>
-        <th class="header">
-          <a href="pages.html">
-            Pages<i class="glyphicon glyphicon-chevron-down"></i
-          ></a>
+        <th class="header" >
+          <a href="pages.html">Pages</a>
         </th>
         <th class="header" style="background-color: rgb(0, 54, 75)">
-          <a href="element.html"> Elements<i class="glyphicon glyphicon-chevron-down"></i>
-        </th></a>
+          <a href="element.html"> Elements</a>
+        </th>
         <th class="header">
-            <a href="portfolio.html"> Portfolio <i class="glyphicon glyphicon-chevron-down"></i>
-        </th></a>
+          <a href="portfolio.html"> Portfolio </a>
+        </th>
         <th class="header">
-            <a href="shop.html">Shop<i class="glyphicon glyphicon-chevron-down"></i>
-        </th></a>
+          <a href="shop.html"> Shop</a>
+        </th>
         <th class="header">
           <select id="lang">
             <option value="English" selected>ENG</option>
@@ -92,6 +84,5 @@
         </th>
       </tr>
     </table>
-    <div></div>
   </body>
 </html>
